--- a/src/app/components/certification-card/certification-card.component.scss
+++ b/src/app/components/certification-card/certification-card.component.scss
@@ -18,19 +18,27 @@
         box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
         display: flex;
         font-size: 14px;
-        .card_r1{
-            width: 100%;
-            display: flex;
-            flex-direction: column;
-            .c1{
-                padding: 2px;
-            }
+        .card_left{
+            display: none;
         }
-        .card_r2{
-            width: 100%;
-           
-            .card_steps{
-                height: 100%;
+        .card_right{
+            width: 90%;
+            height: 100%;
+            .card_r1{
+                width: 100%;
+                display: flex;
+                flex-direction: column;
+                .c1{
+                    padding: 2px;
+                }
+            }
+            .card_r2{
+                width: 100%;
+                display: flex;
+                align-items: end;
+                .card_steps{
+                    height: 100%;
+                }
             }
         }
     }
@@ -61,36 +69,169 @@
         font-size: 12px;
       }
     
+      .c1{
+        span{
+            b::after{
+            content: ": ";
+            }
+        }
+      }
 }
 
-@media (min-width: 768px) {
+@media (min-width: 769px) {
     .cert_card{
         width: 95%;
+        display: flex;
+        align-items: center;
         height: 12rem;
         border-radius: 10px;
         padding: 10px;
-        border-left: 10px solid red;
         box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
-        .card_r1{
-            width: 100%;
-            height: 60%;
-            display: flex;
-            align-items: center;
-            .c1{
-                padding: 10px;
-                display: flex;
-                flex-direction: column;
-                width: 20%;
+        .card_left{
+            width: 10%;
+            img{
+                width: 100%;
+                height: 100px;
+                object-fit: contain;
             }
         }
-        .card_r2{
-            width: 100%;
-            height: 40%;
-        }
-    } 
+        .card_right{
+            width: 90%;
+            .card_r1{
+                width: 100%;
+                height: 60%;
+                display: flex;
+                align-items: center;
+                .c1{
+                    padding: 10px;
+                    display: flex;
+                    flex-direction: column;
+                    width: 20%;
+                    align-items:center;
+                    span{
+                        padding: 5px 0;
+                        font-size: 14px;
+                    }
+                    span:first-child{
+                        border-bottom: 1px solid #eeeeee;
+                    }
+                }
+                .cname{
+                    white-space: nowrap;
+                }
+            }
+            .card_r2{
+                width: 100%;
+                // height: 40%;
+                .cdownload{
+                    text-align: end;
+                    margin-right: 30px; 
+                }
+            }
+         } 
+    }
+    :host ::ng-deep .p-steps-number{
+       font-size: 16px;
+    }
+    :host ::ng-deep .p-steps-title{
+        font-size: 14px;
+     }
+
 }
 
+:host ::ng-deep .p-dropdown-label{
+    font-size: 12px;
+}
+
+:host ::ng-deep .p-dropdown-panel .p-dropdown-items .p-dropdown-item {
+    padding: 7px 10px;
+    font-size: 14px;
+}
 
 :host ::ng-deep .p-steps-number{
     cursor: pointer;
   }
+
+    .cert_card{
+        position: relative;
+    }   
+
+    .remove_cert{
+        position: absolute;
+        top: 0;
+        right: 0;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        width: 25px;
+        height: 25px;
+        font-weight: bold;
+        margin: 10px 10px 0 0;
+        cursor: pointer;
+        i{
+            font-weight: bolder;
+            color: red;
+        }
+    }
+
+    .remove_cert:hover{
+        i{
+            transform: scale(1.08);
+        }
+    }
+
+  .cert_card {
+    &.todo {
+        border-left: 10px solid orange;
+    }
+
+    &.inprogress {
+        border-left: 10px solid #008eff;
+    }
+
+    &.completed {
+        border-left: 10px solid #22c55e;
+    }
+}
+
+:host ::ng-deep .p-steps {
+    .todo {
+        .p-steps-number {
+            color: #bbbbbb;
+        }
+    }
+
+    .inprogress {
+        .p-steps-number {
+            color: #008eff;
+        }
+    }
+
+    .completed {
+        .p-steps-number {
+            color: #22c55e;
+        }
+    }
+}
+
+:host ::ng-deep .p-steps .p-steps-item {
+    .p-steps-number {
+        &.todo {
+            background: yellow;
+        }
+
+        &.inprogress {
+            background: blue;
+        }
+
+        &.completed {
+            background: green;
+        }
+    }
+}
+
+.cert_name{
+    white-space: break-spaces;
+}
+
+
