--- a/src/app/components/employee-page/employee-page.component.html
+++ b/src/app/components/employee-page/employee-page.component.html
@@ -10,7 +10,7 @@
                 </span>
                 <span class="">
                     <label for="password">Password</label>
-                    <input type="password" formControlName="password"  [disabled]="true" />
+                    <input type="password" formControlName="password" />
                 </span>
                 <div class="login_btn">
                     <p-button type="submit" label="Login" (click)="empLogin()"></p-button>
@@ -21,13 +21,47 @@
     @else {
         <div class="emp_cards">
             <div class="emp_cards_header">
-                <p-avatar [label]="certData.employeeName[0]" styleClass="mr-2" size="normal" shape="circle"></p-avatar>
-                <h3>{{certData.employeeName}}</h3>
+                <div class="emp_cards_left">
+                    <i class="pi pi-bars" (click)="onNavOpen()"></i>
+                    <p-avatar [label]="selectedEmpData.employeeName[0]" styleClass="mr-2" size="normal" shape="circle"></p-avatar>
+                    <h3>{{selectedEmpData.employeeName}}</h3>
+                </div>
+                <div class="emp_cards_right">
+                    <p-button label="Back" [disabled]="false" (click)="goToEmpPanel()"></p-button>
+                </div>
+                
             </div>
-            <div class="emp_cards_container" *ngFor="let certDetails of certData.certifications">
-                <app-certification-card [certData]="certDetails" ></app-certification-card>
+            <div class="emp_cards_container scroll-container">
+                @if(selectedEmpData.certifications.length){
+                    <div class="card">
+                      <p-tabView>
+                        <p-tabPanel *ngFor="let tab of tabs; let i = index; let last = last" [header]="tab">
+                            @if(isCertAvailable(i)){
+                                <div *ngFor="let certDetails of selectedEmpData.certifications">
+                                    @if(certDetails.status === i){
+                                        <app-certification-card [certData]="certDetails" [userId]="selectedEmpData.id"></app-certification-card>
+                                    }
+                                  </div>
+                            }
+                            @else {
+                                <h3 class="no_cert">No Certifications available!!</h3>
+                            }
+                          </p-tabPanel>
+                      </p-tabView>
+                    </div>
+                } @else{
+                    <div>
+                        <h3>No Certifications available!!</h3>
+                    </div>
+                }
             </div>
         </div>
     }
     </div>
+    <div class="emp_nav" *ngIf="globalService.showNavigationFlag" >
+        <app-side-nav></app-side-nav>
+    </div>
+</div>
+<div class="emp_dialog" *ngIf="globalService.showDialogFlagInAddCert">
+    <app-new-cert-dialog></app-new-cert-dialog>
 </div>
